# documind

./: .env  .gitignore  Act as my skill tutor with the following context.docx  alembic.ini  auth.py  database.py  documind.db  documind.txt  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 06525c065a2d_initial_migration.py  069655632bfe_create_documents_table.py  9eed383d6a47_create_users_table_and_add_user_id_to_.py
backend/: Dockerfile  ai.py  auth.py  database.py  dependencies.py  exceptions.py  main.py  requirements.txt
backend/models/: document.py  user.py
backend/routers/: auth.py  documents.py
backend/schemas/: document.py
backend/services/: document.py  user.py
frontend/: .env
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: Navbar.jsx  UploadForm.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Signup.jsx
models/: document.py  user.py
routers/: auth.py  documents.py
schemas/: document.py  user.py
services/: document.py
uploads/: hello.txt
