[project]
name = "documind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.100.0",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "google-genai>=2.0.1",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
